sfdx-source/Modules/auction/objects/AuctionItem__c/AuctionItem__c.object-meta.xml
<CustomObject>
    <label>Auction Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auction Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>