sfdx-source/Modules/auction/objects/AuctionItem__c/fields/Attribution__c.field-meta.xml
<CustomField>
    <fullName>Attribution__c</fullName>
    <label>Attribution</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>