sfdx-source/Modules/auction/objects/AuctionItem__c/fields/Auction__c.field-meta.xml
<CustomField>
    <fullName>Auction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auction</label>
    <referenceTo>Auction__c</referenceTo>
    <relationshipLabel>Auction Items</relationshipLabel>
    <relationshipName>AuctionItems</relationshipName>
    <type>Lookup</type>
</CustomField>