sfdx-source/Modules/auction/objects/AuctionItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Auction Item.</description>
    <inlineHelpText>Enter a description of the Auction Item.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>